Add license information

--- a/package.json
+++ b/package.json
@@ -5,4 +5,5 @@
 , "repository": 
   { "type": "git"
   , "url": "https://github.com/dominictarr/connect-restreamer.git" }
+, "license": "MIT"
 , "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://bit.ly/dominictarr)" }
